@@ -1,8 +1,10 @@
 <?xml version="1.0"?>
+<!-- @mxmlc -library-path+=../classes -source-path+=../classes -incremental -->
 <echo:EchoTest xmlns:mx="http://www.adobe.com/2006/mxml"
  	       xmlns:echo="org.red5.samples.echo.*"
 	       pageTitle="AMF3 Echo Client" layout="vertical"
-	       backgroundColor="#F4F4F4" themeColor="haloBlue">
+	       backgroundColor="#F4F4F4" themeColor="haloBlue"
+		   width="780" height="580">
 	<mx:Form width="100%" paddingBottom="0" paddingTop="0" paddingRight="0" paddingLeft="0">
 		<mx:FormItem label="setCredentials:" width="100%">
 			<mx:HBox width="100%">
@@ -24,9 +26,18 @@
 				<mx:Button id="btnConnectRTMP3" label="RTMP AMF3" labelPlacement="left" click="onConnect('rtmp', ObjectEncoding.AMF3)" />
 				<mx:Button id="btnConnectHTTP0" label="HTTP AMF0" labelPlacement="left" click="onConnect('http', ObjectEncoding.AMF0)" />
 				<mx:Button id="btnConnectHTTP3" label="HTTP AMF3" labelPlacement="left" click="onConnect('http', ObjectEncoding.AMF3)" />
+				<mx:Button id="btnConnectRemoteObject" label="mx:RemoteObject" labelPlacement="left" click="onConnect('remoteObject', ObjectEncoding.AMF3)" />
 			</mx:HBox>
 		</mx:FormItem>
 	</mx:Form>
 	<mx:TextArea id="textArea" width="100%" height="100%">
     </mx:TextArea>
+	<mx:RemoteObject 
+		id="echoService" 
+		destination="Red5"
+		source="EchoService"
+		result="onRemotingResult(event.result)"
+		fault="onRemotingError(event.fault.faultString)">
+       <mx:method name="echo" />
+    </mx:RemoteObject>
 </echo:EchoTest>
